[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Timer/Timer.gd" type="Script" id=1]
[ext_resource path="res://scenes/Clock/Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/timer_font.tres" type="DynamicFont" id=3]

[node name="Timer" type="Control"]
margin_right = 216.0
margin_bottom = 64.0
rect_min_size = Vector2( 216, 64 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="MinutesLabel" type="Label" parent="."]
margin_left = 8.0
margin_right = 70.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="SecondsLabel" type="Label" parent="."]
margin_left = 88.0
margin_right = 150.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
text = "00"

[node name="SeparatorLabel" type="Label" parent="."]
margin_left = 72.0
margin_right = 88.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
text = ":"
align = 1

[node name="Clock" parent="." instance=ExtResource( 2 )]
margin_left = 160.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 48.0
clock_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 0, 0, 0, 0 )
wait_time = 2.5

[connection signal="timeout" from="Clock" to="." method="_on_Clock_timeout"]
